# crabby

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/changelog/: 0.1.1.md  0.1.10.md  0.1.100.md  0.1.101.md  0.1.102.md  0.1.103.md  0.1.104.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.15.md  0.1.16.md  0.1.17.md  0.1.18.md  0.1.19.md  0.1.2.md  0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md  0.1.25.md  0.1.26.md  0.1.27.md  0.1.28.md  0.1.29.md  0.1.3.md  0.1.30.md  0.1.31.md  0.1.32.md  0.1.33.md  0.1.34.md  0.1.35.md  0.1.36.md  0.1.37.md  0.1.38.md  0.1.39.md  0.1.4.md  0.1.40.md  (+67 more)
.github/scripts/: prepare-release.sh
.github/workflows/: ci.yml  prepare-release.yml  prerelease.yml  release.yml  wiki.yml
crates/crabby-bake/: Cargo.toml
crates/crabby-bake/src/: bake.rs  bake_key.rs  bake_pck.rs  lib.rs
crates/crabby-cli/: Cargo.toml
crates/crabby-cli/src/: args.rs  exit.rs  lib.rs
crates/crabby-cli/src/commands/: doctor.rs  install.rs  mod.rs  mods.rs  uninstall.rs
crates/crabby-config/: Cargo.toml
crates/crabby-config/src/: cfg_io.rs  keycode.rs  lib.rs  mcm.rs  mod_cache.rs  mod_index.rs  saves.rs
crates/crabby-detokenizer/: Cargo.toml
crates/crabby-detokenizer/examples/: detok.rs
crates/crabby-detokenizer/src/: decode.rs  format.rs  frame.rs  lib.rs  reconstruct.rs  tokens.rs
crates/crabby-detokenizer/src/decode/: cursor.rs  identifiers.rs  maps.rs  tokens_stream.rs  variants.rs
crates/crabby-detokenizer/tests/: differential.rs  full_corpus.rs
crates/crabby-detokenizer/tests/fixtures/expected/: Audio.gd  Camera.gd  Door.gd  Hitbox.gd  Pickup.gd
crates/crabby-detokenizer/tests/fixtures/gdc/: Audio.gdc  Camera.gdc  Door.gdc  Hitbox.gdc  Pickup.gdc
crates/crabby-error/: Cargo.toml
crates/crabby-error/src/: lib.rs
crates/crabby-install/: Cargo.toml  build.rs
crates/crabby-install/examples/: dump_shim.rs
crates/crabby-install/src/: artifacts.rs  bake_status.rs  doctor.rs  game_dir.rs  install.rs  lib.rs  manifest.rs  override_cfg.rs  pck_backup.rs  uninstall.rs
crates/crabby-install/src/pck_backup/: tests.rs
crates/crabby-manifest/: Cargo.toml
crates/crabby-manifest/src/: lib.rs
crates/crabby-mod-analyzer/: Cargo.toml
crates/crabby-mod-analyzer/src/: discover.rs  lib.rs
crates/crabby-mod-analyzer/tests/: all_mods_smoke.rs  ti_smoke.rs
crates/crabby-modpack/: Cargo.toml
crates/crabby-modpack/src/: lib.rs
crates/crabby-modworkshop/: Cargo.toml
crates/crabby-modworkshop/src/: cache.rs  catalog.rs  client.rs  lib.rs  model.rs
crates/crabby-pack/: Cargo.toml
crates/crabby-pack/src/: canary.rs  entry.rs  lib.rs  pack.rs
crates/crabby-pack/src/pack/: tests.rs
crates/crabby-parser/: Cargo.toml
crates/crabby-parser/examples/: parse.rs
crates/crabby-parser/src/: function.rs  lib.rs  params.rs  parser.rs  regex_set.rs  typed_decls.rs
crates/crabby-parser/src/parser/: tests.rs
crates/crabby-parser/tests/: full_corpus.rs  mod_smoke.rs
crates/crabby-pck/: Cargo.toml
crates/crabby-pck/examples/: extract.rs  inspect.rs
crates/crabby-pck/src/: archive.rs  lib.rs  writer.rs
crates/crabby-pck/src/archive/: tests.rs
crates/crabby-pck/src/format/: directory.rs  header.rs  mod.rs
crates/crabby-pck/src/writer/: tests.rs
crates/crabby-platform/: Cargo.toml
crates/crabby-platform/src/: lib.rs  observability.rs
crates/crabby-rewriter/: Cargo.toml
crates/crabby-rewriter/examples/: rewrite_full.rs
crates/crabby-rewriter/src/: ai_select_weapon_transform.rs  ai_spawner_transform.rs  autofix.rs  call_rewriter.rs  compiler_spawn_transform.rs  data_intercept.rs  database_transform.rs  engine_void.rs  events_index_transform.rs  fish_pool_transform.rs  full_script.rs  hook_name.rs  id_index_transform.rs  lib.rs  loader_transform.rs  loot_table_index_transform.rs  normalize.rs  recipes_index_transform.rs  renamer.rs  replace_method.rs  resource_serialized.rs  rewrite.rs  runtime_incompatible.rs  template.rs  template_selection.rs  trader_data_index_transform.rs
crates/crabby-rewriter/src/template/: additive.rs  data_intercept.rs  fast.rs  non_void.rs  void.rs
crates/crabby-rewriter/tests/: fixture.rs  full_corpus.rs  full_script.rs
crates/crabby-rewriter/tests/fixtures/: additive.expected.gd  additive.input.gd  controller_physics_process.expected.gd  controller_physics_process.input.gd  coroutine.expected.gd  coroutine.input.gd  data_intercept.input.gd  fast_template.expected.gd  fast_template.input.gd  full_corpus_snapshot.txt  multi_method.expected.gd  multi_method.input.gd
crates/crabby-scanner/: Cargo.toml
crates/crabby-scanner/src/: lib.rs
crates/crabby-ui/: Cargo.toml
crates/crabby-ui/assets/fonts/: LICENSES.md
crates/crabby-ui/src/: app.rs  launcher_config.rs  lib.rs  main.rs  modpack_ui.rs  open.rs  profile_modal.rs  quick_theme.rs  style.rs  theme.rs
crates/crabby-ui/src/tabs/: diagnostics.rs  logs.rs  mod.rs  mods.rs  profiles.rs  saves.rs
crates/crabby-ui/src/tabs/settings/: appearance.rs  mod.rs
shim/lib/: boot.gd  lib.gd
shim/registry/: aggregators.gd  ai.gd  ai_loadouts.gd  api.gd  events.gd  fish.gd  inputs.gd  items.gd  loader.gd  loot.gd  recipes.gd  resources.gd  scene_nodes.gd  scenes.gd  setup.gd  shared.gd  sounds.gd  traders.gd
wiki/: Installation.md
