[package]
name = "crabby-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "`crabby` command-line driver for the bake pipeline."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
crabby-bake.workspace = true
crabby-config.workspace = true
crabby-error.workspace = true
crabby-platform.workspace = true
crabby-install.workspace = true
tracing.workspace = true
clap.workspace = true
