[package]
name = "crabby-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Canonical error type for the crabby-loader workspace."

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
