[package]
name = "crabby-modpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shareable mod-set + MCM-config bundle format for crabby."

[lints]
workspace = true

[dependencies]
crabby-error.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zstd.workspace = true
base64.workspace = true
