[package]
name = "crabby-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ZIP pack emission, override.cfg generation, shim materialization."

[lints]
workspace = true

[dependencies]
crabby-error.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
crabby-detokenizer.workspace = true
crabby-parser.workspace = true
crabby-rewriter.workspace = true
