[package]
name = "crabby-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Thin cross-platform abstractions (paths, processes, filesystem)."

[lints]
workspace = true

[dependencies]
crabby-error.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
